# dbt-access-management-viz

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
dbt_access_management_viz/: app.py
dbt_access_management_viz/pages/: identity_permissions.py  permissions_tables.py
dbt_access_management_viz/repository/: redshift_repository.py
dbt_access_management_viz/service/: redshift_service.py
