[tool.poetry]
name = "dbt-access-management-viz"
version = "0.1.0"
description = ""
authors = ["astaros <Astaros@trueblue.com>"]
readme = "README.md"
packages = [{ include = "dbt_access_management_viz" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
boto3 = ">=1.26.0,<2.0"
pandas = ">=1.5.0,<2.0"
#botocore = ">=1.29.0,<2.0"
redshift_connector = ">=2.0.0,<3.0"
numpy="1.26.4"
streamlit="1.42.2"
plotly="6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

